--- a/src/Pages/HomePage/Homepage.css
+++ b/src/Pages/HomePage/Homepage.css
@@ -9,10 +9,10 @@
 .two{
     min-height: 100vh;
     /* min-width: 100vw; */
-    background-color: rgba(26 26 26) ;
+    background-color: rgb(252, 252, 252) ;
     padding-right: 200px;
     padding-left: 200px;
     padding-top: 40px;
-    color: white;
+    color: rgb(0, 0, 0);
 
 }
