--- a/src/css/home-page/Faq.css
+++ b/src/css/home-page/Faq.css
@@ -3,14 +3,18 @@
     padding-bottom: 40px;
 }
 .faq-card{
+    /* background-color: #ffffff    ; */
+    /* z-index: -1; */
+    /* border: 1px solid rgb(232, 232, 232); */
     cursor: pointer;
-    border-top: 1px solid white;
-    border-left: 1px solid white;
-    border-right: 1px solid white;
+    border-top: 1px solid rgb(232, 232, 232);
+    border-left: 1px solid rgb(232, 232, 232);
+    border-right: 1px solid rgb(232, 232, 232);
     margin-bottom: 20px;
     border-radius: 10px;
 }
 .question{
+    /* z-index: -1; */
     padding-top: 30px;
     padding-bottom: 30px;
     font-weight: 100;
@@ -23,6 +27,8 @@
 }
 
 .faq-card-flex{
+    position: relative;
+    /* z-index: -1; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -41,6 +47,6 @@
     padding: 20px;  
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    border-bottom: 1px solid white;
-    background-color: #262626;
+    border-bottom: 1px solid rgb(232, 232, 232);
+    background-color: #ffffff;
 }
